style.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
@import url(https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic);
@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);

body {
    overflow-x: hidden;
    padding-top:50px;
    font-family: 'Open Sans', sans-serif;
    font-size: 13px;
    color: #666;
}

h2, h2, h3 {
    font-weight: 100;
}

.navbar-default {
    background: #444444 none;
    border-bottom: none;
}
.navbar-default .navbar-brand {
    color: #fdb655;
}
.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
    color: #fdb655;
}
.navbar-default .navbar-text {
    color: #999999;
}
.navbar-default .navbar-nav > li > a {
    color: #999999;
}
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
    color: #fdb655;
}
.navbar-default .navbar-nav > li > .dropdown-menu {
    background-color: #444444;
}
.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
    color: #999999;
}
.navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
    color: #fdb655;
    background: #444444 none;
}
.navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
    background-color: #444444;
}
.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
    color: #fdb655;
    background: #444444 none;
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
    color: #fdb655;
    background: #444444 none;
}
.navbar-default .navbar-nav > .open > a,
.navbar-default .navbar-nav > .open > a:hover,
.navbar-default .navbar-nav > .open > a:focus {
    color: #fdb655;
    background: #444444 none;
}
.navbar-default .navbar-toggle {
    border-color: #444444;
}
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #444444;
}
.navbar-default .navbar-toggle .icon-bar {
    background-color: #999999;
}
.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
    border-color: #999999;
}
.navbar-default .navbar-link {
    color: #999999;
}
.navbar-default .navbar-link:hover {
    color: #fdb655;
}

@media (max-width: 767px) {
    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
        color: #999999;
    }
    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
    .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
        color: #fdb655;
    }
    .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
    .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
    .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
        color: #fdb655;
        background-color: #444444;
    }
}

#main-section {
    padding: 0;
}
#main-section .row {
    padding-bottom: 30px;
    background: url("images/main-section-background.png") fixed center;
    background-size: cover;
    background-origin: content-box;
}

#main-section h2 {
    font-size: 55px;
    padding-left:10px;
    color: #404040;
}

#main-section h3 {
    margin-bottom: 50px;
    color: #606060;
}

#main-section img {
    width: 150px;
}

#main-section a {
    margin-top: 5px;
    margin-right: 5px;
    padding:10px;
    font-size: 20px;
    text-transform: uppercase;
    line-height: 28px;
    width:230px;
}

#whatis-jsonb-section {
    margin-top:30px;
    font-weight: 100;
}

#whatis-jsonb-section strong {
    font-weight: 500;
}

#whatis-jsonb-section p {
    margin-top:30px;
    margin-bottom:20px;
    font-size: 23px;
    line-height: 36px;
}

#jsonb-features-section {
    margin-top: 70px;
}

#jsonb-features-section p {
    color: #666;
    font-size: 13px;
    line-height: 22px;
    font-weight: 100;
}

.icon-large {
    font-size: 3em;
    color: #666;
    transition: all 0.4s ease-in-out;
    -moz-transition: all 0.4s ease-in-out;
    -webkit-transition: all 0.4s ease-in-out;
    -o-transition: all 0.4s ease-in-out;
}

#sample-section {
    margin-top: 40px;
}

#sample-section pre {
    padding: 0;
}
.subtitles {
    border-bottom: solid 1px #eee;
    padding-bottom: 5px;
    margin-top: 55px;
}

.subtitles > span {
    border-bottom: solid 1px orange;
    padding-bottom: 4px;
    margin-top: 20px;
}

#footer-section {
    padding: 10px;
    text-align: center;
}

#general-header-section {
    padding: 0;
}

#general-header-section .row {
    padding: 5px 0 10px 10px;
    background: url("images/main-section-background.png") fixed center;
    background-size: cover;
    background-origin: content-box;
    border-bottom: solid 1px #adadad;
}

#general-header-section h3 {
    color: #000;
    font-size: 33px;
}

#general-header-section img {
    width: 50px;
}

.content-section p {
    margin-top:10px;
    margin-bottom:20px;
    font-size: 16px;
    line-height: 36px;
    text-align: justify;
}

.content-section li {
    font-size: 16px;
    margin-bottom: 20px;
}

.content-section .row {
    padding:10px;
}

.content-section pre {
    padding:0;
}

.contributor-description {
    font-size: 13px !important;
    text-align: center !important;
}

@media (max-width: 767px) {
    .general-header-logo {
        display:none;
    }
}

